Promotion Date update 1